--- a/changelog/unreleased/kong/fix-ai-plugin-no-consumer.yml
+++ b/changelog/unreleased/kong/fix-ai-plugin-no-consumer.yml
@@ -1,4 +1,4 @@
-message: "Fix certain AI plugins cannot be applied per consumer or per service."
+message: "Fixed certain AI plugins cannot be applied per consumer or per service."
 type: bugfix
 scope: Plugin
 
