--- a/changelog/unreleased/kong/fix-tracing-sampling-rate.yml
+++ b/changelog/unreleased/kong/fix-tracing-sampling-rate.yml
@@ -1,3 +1,3 @@
-message: "**OpenTelemetry:** improved accuracy of sampling decisions."
+message: "**OpenTelemetry:** Improved accuracy of sampling decisions."
 type: bugfix
 scope: Plugin
