--- a/changelog/unreleased/kong/fix-request-size-limiting-with-chunked-transfer-encoding-and-no-content-length.yml
+++ b/changelog/unreleased/kong/fix-request-size-limiting-with-chunked-transfer-encoding-and-no-content-length.yml
@@ -1,3 +1,3 @@
-message: "request-size-limiting check the file size when the request body buffered to a temporary file."
+message: "**Request Size Limiting**: Fixed an issue where the body size doesn't get checked when the request body is buffered to a temporary file."
 type: bugfix
-scope: "Plugin"
+scope: Plugin
