--- a/changelog/unreleased/kong/http-log-Improvement.yml
+++ b/changelog/unreleased/kong/http-log-Improvement.yml
@@ -1,4 +1,4 @@
 message: |
-  **HTTP-Log**: Improved the concurrency of log sending when `max_batch_size` is 1.`
+  **HTTP-Log**: When `queue.max_batch_size` is 1, log entries are now sent in separate, parallel HTTP requests.  Previously, they were sent sequentially in FIFO order.
 type: bugfix
 scope: Plugin
