build: adding docker-test-image to gh output (#9651)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,6 +111,7 @@ jobs:
         echo "matrix=$(yq e -I=0 -o=json $matrix_file)" >> $GITHUB_OUTPUT
 
         echo "release-runs-on=${{ github.event_name == 'pull_request' && 'ubuntu-latest-kong' || vars.RELEASE_RUNS_ON }}" >> $GITHUB_OUTPUT
+        echo "docker-test-image=${{ env.PRERELEASE_DOCKER_REPOSITORY }}:${{ github.event.pull_request.head.sha || github.sha }}" >> $GITHUB_OUTPUT
 
         cat $GITHUB_OUTPUT
 
