feat(plugin): standard-webhooks
* feat(plugins): standard-webhooks (#12962)

* Revert "Revert "feat(plugins): add standard-webhooks plugin (#12757)""

This reverts commit 8ff1771cc9499d853955cc3433eff1e4536b0ee8.

* Update kong/plugins/standard-webhooks/internal.lua

Co-authored-by: Samuele <samuele@konghq.com>

---------

Co-authored-by: Samuele <samuele@konghq.com>
(cherry picked from commit 03f056cb1dd03bc305f8edd37aa035fd5552604e)

* fix: cherry pick

* Update plugins-add-standard-webhooks.yml

* Update plugins-add-standard-webhooks.yml

* Update kong/plugins/standard-webhooks/handler.lua

Co-authored-by: Samuele <samuele@konghq.com>

* fix order

---------

Co-authored-by: Samuele <samuele@konghq.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -414,6 +414,10 @@ copyright:
 - changed-files:
   - any-glob-to-any-file: COPYRIGHT
 
+plugins/standard-webhooks:
+- changed-files:
+  - any-glob-to-any-file: kong/plugins/standard-webhooks/**/*
+
 schema-change-noteworthy:
 - changed-files:
   - any-glob-to-any-file: [
