--- a/changelog/unreleased/kong/cp-luarocks-admin-to-bin.yml
+++ b/changelog/unreleased/kong/cp-luarocks-admin-to-bin.yml
@@ -1,3 +1,3 @@
-message: "Ensure luarocks-admin is available in /usr/local/bin"
+message: "Fixed an issue where luarocks-admin was not available in /usr/local/bin."
 type: bugfix
 scope: Core
