feat(postgres): add assume role support for AWS IAM Database Authentication (#8721)
* feat(postgres): add assume role support for AWS IAM Database Authentication

This commit adds support for role assuming in AWS IAM Database
Authentication. Target role ARN can be specified by a new global
configuration field `pg_iam_auth_assume_role_arn`, as well as another
new global configuration field `pg_iam_auth_role_session_name` for
specifying the role session name during role assuming.

The underlying code is similar with the one implemented in AWS
Vault backend.

https://konghq.atlassian.net/browse/KAG-4561

* docs(changelog): add changelog for supporting aws iam auth role assuming

* fix(postgres): add missing credentials in RDS signer initialization

* style(*): add comment on the signer credential overriding

* docs(changelog): reword changelog

* fix(*): separate different RDS instance for rw/ro connection

* fix(rds): fix typo

* fix(rds): set rds instance cache

* fix(*): init rds token for read only mode, in case workers try to use db conn in init_worker phase

* tests(*): enable PG_IAM_ASSUME_ROLE for gateway-api-tests-matrix

* tests(api-test): add system cert into ssl_trusted_certificate to ensure kong reload exec successfully

* tests(*): add ut for testing generate assume role token

---------

Co-authored-by: elliotchancj <elliot.chan@konghq.com>

--- a/.github/workflows/gateway-api-tests-matrix.yml
+++ b/.github/workflows/gateway-api-tests-matrix.yml
@@ -329,7 +329,7 @@ jobs:
           AZURE_FUNCTION_KEY: ${{ secrets.TEST_API_AZURE_FUNCTION_KEY }}
           APPD_PASSWORD: ${{ secrets.TEST_API_APPD_PASSWORD }}
           TEST_APP: gateway
-                   
+
       - name: Get Gateway Details
         if: always()
         continue-on-error: true
@@ -375,6 +375,7 @@ jobs:
       GW_DP_IMAGE: ${{ github.event.inputs.gateway_image || 'kong/kong-gateway-internal:nightly-ubuntu' }}
       GW_MODE: ${{ matrix.gateway_mode }}
       PG_IAM_AUTH: ${{ matrix.postgres_version == 'rds-15.3' && 'true' || 'false' }}
+      PG_IAM_ASSUME_ROLE: ${{ matrix.postgres_version == 'rds-15.3' && 'true' || 'false' }}
     strategy:
       fail-fast: false
       matrix:
@@ -430,7 +431,7 @@ jobs:
         with:
           username: ${{ secrets.GHA_DOCKERHUB_PULL_USER }}
           password: ${{ secrets.GHA_KONG_ORG_DOCKERHUB_PULL_TOKEN }}
-      
+
       - name: Add domain.test to hostnames for ACME Plugin tests
         run: echo "127.0.0.1 domain.test" | sudo tee -a /etc/hosts
 
@@ -605,7 +606,7 @@ jobs:
         with:
           username: ${{ secrets.GHA_DOCKERHUB_PULL_USER }}
           password: ${{ secrets.GHA_KONG_ORG_DOCKERHUB_PULL_TOKEN }}
-      
+
       - name: Add domain.test to hostnames for ACME Plugin tests
         run: echo "127.0.0.1 domain.test" | sudo tee -a /etc/hosts
 
@@ -673,7 +674,7 @@ jobs:
 
       - name: Install decK
         uses: kong/setup-deck@v1
-      
+
       - name: Copy .npmrc
         run: cp .npmrc.ci .npmrc
 
