--- a/changelog/unreleased/kong/pdk-log-error.yml
+++ b/changelog/unreleased/kong/pdk-log-error.yml
@@ -1,3 +1,3 @@
-message: fix a bug that pdk.log.serialize() will throw an error when json entity set by serialize_value contains cjson.null
+message: Fixed a bug where `pdk.log.serialize()` threw an error when Json entity set by `kong.log.serialize_value()` contains `cjson.null`.
 type: bugfix
 scope: PDK
