--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -762,9 +762,8 @@ jobs:
 
     - name: Get latest commit SHA on master
       run: |
-        echo "latest_sha=$(git ls-remote origin -h refs/heads/${{ github.event.inputs.default_branch }} | cut -f1)" >> $GITHUB_ENV
+        echo "latest_sha=$(git ls-remote origin -h refs/heads/master | cut -f1)" >> $GITHUB_ENV
 
-          type=raw,${{ needs.metadata.outputs.commit-sha }}-${{ matrix.label }}
     - name: Docker meta
       id: meta
       uses: docker/metadata-action@v5
@@ -783,8 +782,8 @@ jobs:
         # 20230228, 20230228-{distro}  (input.version is "nightly")
         # {version}-20230228, {version}-20230228-{distro}  (input.version is set and not on master)
         tags: |
-          type=raw,value=latest,enable=${{ matrix.label == 'ubuntu' && github.ref_name == github.event.inputs.default_branch && env.latest_sha == needs.metadata.outputs.commit-sha }}
-          type=raw,value=latest,enable=${{ matrix.label == 'ubuntu' && github.ref_name == github.event.inputs.default_branch && env.latest_sha == needs.metadata.outputs.commit-sha }},suffix=
+          type=raw,value=latest,enable=${{ matrix.label == 'ubuntu' && github.ref_name == 'master' && env.latest_sha == needs.metadata.outputs.commit-sha }}
+          type=raw,value=latest,enable=${{ matrix.label == 'ubuntu' && github.ref_name == 'master' && env.latest_sha == needs.metadata.outputs.commit-sha }},suffix=
           type=match,enable=${{ github.event_name == 'workflow_dispatch' && github.event.inputs.official  == 'true' }},pattern=\d.\d,value=${{ github.event.inputs.version }}
           type=match,enable=${{ github.event_name == 'workflow_dispatch' && matrix.label == 'ubuntu' && github.event.inputs.official  == 'true' }},pattern=\d.\d,value=${{ github.event.inputs.version }},suffix=
           type=raw,enable=${{ github.event_name == 'workflow_dispatch' }},${{ github.event.inputs.version }}
