--- a/.github/matrix-commitly.yml
+++ b/.github/matrix-commitly.yml
@@ -49,11 +49,11 @@ build-packages:
   check-manifest-suite: el9-arm64
 
   # Amazon Linux
-- label: amazonlinux-2
-  package: rpm
-  package-type: aws2
-  check-manifest-suite: amazonlinux-2-amd64
-  bazel-args: --platforms=//:aws2-crossbuild-x86_64
+#- label: amazonlinux-2
+#  package: rpm
+#  package-type: aws2
+#  check-manifest-suite: amazonlinux-2-amd64
+#  bazel-args: --platforms=//:aws2-crossbuild-x86_64
 - label: amazonlinux-2023
   image: amazonlinux:2023
   package: rpm
