--- a/changelog/unreleased/kong/move-sockets-to-subdir.yml
+++ b/changelog/unreleased/kong/move-sockets-to-subdir.yml
@@ -1,3 +1,3 @@
-message: Moved internal unix sockets to a subdirectory of the Kong prefix.
+message: Moved internal Unix sockets to a subdirectory (`sockets`) of the Kong prefix.
 type: bugfix
 scope: Core
