feat(core): introduce `lua-resty-simdjson` (#13421)
Summary:
* a new conf option `cluster_cjson` to switch between cjson and simdjson
* unit test for cjson compatibility

simdjson requires gcc 7.4+, it may not be compiled successfully on some Linux releases (aws-liunx-2).

lua-resty-simdjson has released the first version [`1.0.0`](https://github.com/Kong/lua-resty-simdjson/releases/tag/1.0.0).

KAG-3647

---------

Co-authored-by: Wangchong Zhou <wangchong@konghq.com>

--- a/.github/matrix-full.yml
+++ b/.github/matrix-full.yml
@@ -86,11 +86,12 @@ build-packages:
   package: rpm
   package-type: aws2
   check-manifest-suite: amazonlinux-2-amd64
-  bazel-args: --platforms=//:aws2-crossbuild-x86_64
+  # simdjson doesn't compile on gcc7.3.1 (needs 7.4)
+  bazel-args: --platforms=//:aws2-crossbuild-x86_64 --//:simdjson=False
 - label: amazonlinux-2-arm64
   package: rpm
   package-type: aws2
-  bazel-args: --platforms=//:aws2-crossbuild-aarch64 --//:brotli=False
+  bazel-args: --platforms=//:aws2-crossbuild-aarch64 --//:brotli=False --//:simdjson=False
   check-manifest-suite: amazonlinux-2-arm64
 - label: amazonlinux-2023
   image: amazonlinux:2023
