--- a/changelog/3.7.0.0/kong-ee/ldap-adv-string-format-exception.yml
+++ b/changelog/3.7.0.0/kong-ee/ldap-adv-string-format-exception.yml
@@ -1,3 +1,3 @@
-message: "**LDAP AUTH Advanced:** fix an issue where an exception will be throwed when ldap search fails"
+message: "**LDAP AUTH Advanced:** fix an issue where an exception will be thrown when ldap search fails"
 type: bugfix
 scope: Plugin
