feat(plugins): add new header-cert-auth plugin (#9723)
* new mtls-waf plugin

* use pongo from mtls-waf

* rm unused .gitignore and Dockerfile

* fix lint in 02

* changelog

* corrected changelog

* do not hardcode cert path in 03

* proxy_ssl_certificate directives in 06

* import 07

* rename

* add labeler

* spec/06-third-party/01-deck/01-deck-integration_spec.lua

* 06 adapted

* 07 adapted

* certificate_header_name field is required

* working with urlencoded AWS WAF format

* new config: certificate_header_format

* secure_source option

* changelog plugin rename

* renaming issues fixed

* adjust priority so it runs after all other auth plugins

* tests for multi chain cert

* HTTPS and custom credentials tests added

* custom credential with ca_certificate

* custom credential with invalid ca_certificate

* skip consumer lookup with valid certificate

* use skip_consumer_lookup

* config.anonymous with pending tests for negative tests

* address pending tests

* tests: errors

* tests for request certs for specific routes and fix a bug

* non-default workspace tests

* valid partial chain tests

* fix headercertauth cache key

* rename formats

* rearrenge a cert

* default consumer tests

* overrides client_verify field in basic log serialize

* extract DN from header directly (not available in socket context)

* changelog chatgpt

* getting header should be common

* changed-files to labeler

* combine all migrations into one file

* add tags column into table creation statement directly

* add ws_id to the table

* remove send_ca_dn option

This seems to be used in mutual TLS authentication, where the server
sends the list of trusted CAs to the client, and the client then uses
this list to select the appropriate certificate to present.

* new priority: 1009 so that it runs after saml

* fix typo: intermidiate -> intermediate

* move set_header and clear_

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -382,6 +382,10 @@ plugins-ee/mtls-auth:
 - changed-files:
   - any-glob-to-any-file: plugins-ee/mtls-auth/**/*
 
+plugins-ee/header-cert-auth:
+- changed-files:
+  - any-glob-to-any-file: plugins-ee/header-cert-auth/**/*
+
 plugins-ee/opa:
 - changed-files:
   - any-glob-to-any-file: plugins-ee/opa/**/*
