--- a/changelog/unreleased/kong/bump-lua-resty-openssl.yml
+++ b/changelog/unreleased/kong/bump-lua-resty-openssl.yml
@@ -1,2 +1,3 @@
-message: "Bumped lua-resty-openssl from 1.4.0 to 1.5.0"
+message: "Bumped lua-resty-openssl to 1.5.1."
 type: dependency
+scope: Core
