feat(plugin): implement the JSON threat protection plugin (#9472)
The JSON threat protection plugin validates the nesting depth of JSON,
the number of array elements, the number of object entries,
the length of object keys, the length of strings, and the length of the request body.
It will log or terminate requests that violate the security policy.

KAG-4698

---------

Co-authored-by: Qi <qiqi.zhang@konghq.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -358,6 +358,10 @@ plugins/ai-proxy-advanced:
 - changed-files:
   - any-glob-to-any-file: kong/plugins/ai-proxy-advanced/**/*
 
+plugins/json-threat-protection:
+- changed-files:
+  - any-glob-to-any-file: kong/plugins/json-threat-protection/**/*
+
 plugins-ee/ai-azure-content-safety:
 - changed-files:
   - any-glob-to-any-file: plugins-ee/ai-azure-content-safety/**/*
