--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "distribution/lua-resty-jsonschema-rs"]
 	path = distribution/lua-resty-jsonschema-rs
 	url = git@github.com:Kong/lua-resty-jsonschema-rs.git
+[submodule "distribution/lua-resty-json-threat-protection"]
+	path = distribution/lua-resty-json-threat-protection
+	url = git@github.com:Kong/lua-resty-json-threat-protection.git
