Revert "chore(cd): use /release.yml instead of release.yml (#9790)" (#9888)
Reverts Kong/kong-ee#9790 as the upstream has merged the fix https://github.com/benc-uk/workflow-dispatch/pull/77 and `/release.yml` is not matched.

--- a/.github/workflows/release_scheduled.yml
+++ b/.github/workflows/release_scheduled.yml
@@ -59,8 +59,7 @@ jobs:
         uses: benc-uk/workflow-dispatch@e2e5e9a103e331dad343f381a29e654aea3cf8fc # v1
         if: matrix.active_branch == 'yes' || steps.date.outputs.dmod == '1'
         with:
-          # https://github.com/benc-uk/workflow-dispatch/blob/25b02cc069be46d637e8fe2f1e8484008e9e9609/src/main.ts#L58 what?
-          workflow: /release.yml
+          workflow: release.yml
           ref: ${{ matrix.branch }}
           inputs: '{"official":"false", "version":"${{ matrix.version }}"}'
 
