--- a/.github/workflows/gateway-api-tests.yml
+++ b/.github/workflows/gateway-api-tests.yml
@@ -110,8 +110,8 @@ jobs:
           username: ${{ secrets.GHA_DOCKERHUB_PULL_USER }}
           password: ${{ secrets.GHA_KONG_ORG_DOCKERHUB_PULL_TOKEN }}
 
-      - name: Add domain.test to hostnames for ACME Plugin tests
-        run: echo "127.0.0.1 domain.test" | sudo tee -a /etc/hosts
+      - name: Set domain.test to hostnames for ACME and otel file permissions
+        run: echo "127.0.0.1 domain.test" | sudo tee -a /etc/hosts && cd gateway-docker-compose-generator/otel && chmod 666 file_exporter.json
 
       - name: Check for FIPS image
         run: |
@@ -151,6 +151,7 @@ jobs:
           # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image
           CUSTOM_PLUGIN: ${{ endsWith(env.GW_IMAGE, 'amazonlinux-2') && 'false' || env.CUSTOM_PLUGIN_VAR }}
           ACME: true
+          OTEL: true
 
       - name: Logs from Gateway Start
         if: failure()
