--- a/changelog/unreleased/kong/http-log-concurrent-optimize.yml
+++ b/changelog/unreleased/kong/http-log-concurrent-optimize.yml
@@ -1,3 +1,3 @@
-message: "**HTTP-Log**: Added a new configuration `no_queue` to indicates whether to disable the queue mechanism."
+message: "**HTTP-Log**: Added a new configuration `queue.concurrency`"
 type: feature
 scope: Plugin
