fix(plugins/oas-validation): fixed an issue where the plugin cannot obtain the value when the path parameter name contains hyphen characters (#9782)
FTI-6111

--- a/plugins-ee/oas-validation/spec/fixtures/resources/path-match-oas.yaml
+++ b/plugins-ee/oas-validation/spec/fixtures/resources/path-match-oas.yaml
@@ -78,3 +78,14 @@ paths:
       responses:
         201:
           description: Created
+  /hyphen-param/{param-name}:
+    get:
+      parameters:
+        - name: param-name
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        201:
+          description: Created
